--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   <style>@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap');</style>  
   <title>My To-Do List</title>
 </head>
@@ -35,6 +35,6 @@
       </ul>      
     </section>
   </main>
-  <script src="/src/index.js" type="module" defer></script>
+  <script src="./src/index.js" type="module" defer></script>
 </body>
 </html>
